# RepoInsight-AI

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  main.py  pyproject.toml  requirements.txt  train_model.py
.github/workflows/: ci.yml
analysis/: code_analyzer.py
assets/: README.md
data_collection/: github_client.py
llm/: llm_analyzer.py
ml_model/: __init__.py  classifier.py  trainer.py
reporting/: report_builder.py
scripts/: publish_public.ps1
src/: config.py  main.py  train_model.py
src/analysis/: __init__.py  code_analyzer.py  feature_engineering.py  pattern_detector.py
src/data_collection/: __init__.py  code_extractor.py  github_client.py
src/llm/: __init__.py  llm_analyzer.py
src/ml_model/: classifier.py  data_generator.py  trainer.py
src/reporting/: __init__.py  formatter.py  report_builder.py
tests/: test_suite.py
